<resources>
    <string name="app_name">SchoolAppMobileApp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="class_no">Class</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>

    <string-array name="class_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>